dark mode fixed

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
   max-width: 1280px;
   margin:auto;
   
-  background-color: rgb(255, 255, 255);    
 }
 
 .logo {
